All AAs vs only single mutations
Checking whether there are significant changes if we only look for single mutations or all amino acids in each domain

--- a/domain_comparison/Domain_slicing.ipynb
+++ b/domain_comparison/Domain_slicing.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:14.860245Z",
-     "end_time": "2023-07-01T12:04:14.936516Z"
+     "start_time": "2023-07-01T18:41:21.722696Z",
+     "end_time": "2023-07-01T18:41:21.868004Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/frido/anaconda3/envs/topic02_team02/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    }
+   ],
    "source": [
     "#I will write a function, that takes in an aminoacid sequence and the positions where this sequence is to sliced. By this, further domain comparisons are made possible\n",
     "import pandas as pd\n",
@@ -24,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:14.862682Z",
-     "end_time": "2023-07-01T12:04:14.944533Z"
+     "start_time": "2023-07-01T18:41:21.825621Z",
+     "end_time": "2023-07-01T18:41:21.872439Z"
     }
    },
    "outputs": [],
@@ -39,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:14.907060Z",
-     "end_time": "2023-07-01T12:04:14.944916Z"
+     "start_time": "2023-07-01T18:41:21.860439Z",
+     "end_time": "2023-07-01T18:41:21.874250Z"
     }
    },
    "outputs": [
@@ -52,7 +61,7 @@
       "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n1919  T102Q  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.968781   \n1920  T102P  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.408719   \n1921  T102R  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.020282   \n1922  T102Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.479631   \n1923  T102V  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.112441   \n...     ...                                                ...        ...   \n5543  K292F  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.895336   \n5544  K292E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.021127   \n5545  K292N  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.284768   \n5546  K292A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.655653   \n5547  K292Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.951015   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n1919              1           102      T      Q  \n1920              1           102      T      P  \n1921              1           102      T      R  \n1922              1           102      T      Y  \n1923              1           102      T      V  \n...             ...           ...    ...    ...  \n5543              1           292      K      F  \n5544              1           292      K      E  \n5545              1           292      K      N  \n5546              1           292      K      A  \n5547              1           292      K      Y  \n\n[3629 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1919</th>\n      <td>T102Q</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.968781</td>\n      <td>1</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Q</td>\n    </tr>\n    <tr>\n      <th>1920</th>\n      <td>T102P</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.408719</td>\n      <td>1</td>\n      <td>102</td>\n      <td>T</td>\n      <td>P</td>\n    </tr>\n    <tr>\n      <th>1921</th>\n      <td>T102R</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.020282</td>\n      <td>1</td>\n      <td>102</td>\n      <td>T</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>1922</th>\n      <td>T102Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.479631</td>\n      <td>1</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Y</td>\n    </tr>\n    <tr>\n      <th>1923</th>\n      <td>T102V</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.112441</td>\n      <td>1</td>\n      <td>102</td>\n      <td>T</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5543</th>\n      <td>K292F</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.895336</td>\n      <td>1</td>\n      <td>292</td>\n      <td>K</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>5544</th>\n      <td>K292E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.021127</td>\n      <td>1</td>\n      <td>292</td>\n      <td>K</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>5545</th>\n      <td>K292N</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.284768</td>\n      <td>1</td>\n      <td>292</td>\n      <td>K</td>\n      <td>N</td>\n    </tr>\n    <tr>\n      <th>5546</th>\n      <td>K292A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.655653</td>\n      <td>1</td>\n      <td>292</td>\n      <td>K</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>5547</th>\n      <td>K292Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.951015</td>\n      <td>1</td>\n      <td>292</td>\n      <td>K</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>3629 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:14.931433Z",
-     "end_time": "2023-07-01T12:04:15.036400Z"
+     "start_time": "2023-07-01T18:41:21.875318Z",
+     "end_time": "2023-07-01T18:41:22.071028Z"
     }
    },
    "outputs": [],
@@ -129,37 +138,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:15.027360Z",
-     "end_time": "2023-07-01T12:04:15.041137Z"
+     "start_time": "2023-07-01T18:41:22.026881Z",
+     "end_time": "2023-07-01T18:41:22.071260Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "position_mut  AS_old\n1             M        -1.120068\n2             E         0.059833\n3             E        -0.002861\n4             P         0.346287\n5             Q         0.302666\n6             S         0.193160\n7             D         0.278784\n8             P         0.198627\n9             S         0.149515\n10            V         0.487048\n11            E         0.281089\n12            P         0.418316\n13            P         0.299618\n14            L         0.390461\n15            S         0.402770\n16            Q         0.290888\n17            E         0.353817\n18            T        -0.354892\n19            F        -1.473280\n20            S         0.120160\n21            D        -0.070605\n22            L        -0.780215\n23            W        -1.478667\n24            K        -0.556430\n25            L        -0.189364\n26            L        -1.157679\n27            P         0.349025\n28            E         0.349895\n29            N         0.435950\n30            N         0.303946\n31            V         0.072905\n32            L         0.156941\n33            S         0.577768\n34            P         0.932272\n35            L         0.562763\n36            P         0.596648\n37            S         0.630710\n38            Q         0.594752\n39            A         0.619056\n40            M         0.598061\n41            D         0.763765\n42            D         0.665876\n43            L         0.840381\nName: mean, dtype: float64"
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
+    "t1_mean.to_csv('./t1_mean.csv')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
+    "t2_mean.to_csv('./t2_mean.csv')\n",
     "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
+    "pr_mean.to_csv('./pr_mean.csv')\n",
     "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
+    "dna_mean.to_csv('./dna_mean.csv')\n",
     "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
+    "tetra_mean.to_csv('./tetra_mean.csv')\n",
     "\n",
     "reg_mean = reg_domain.mean().rename('mean')\n",
-    "\n",
-    "t1_mean"
+    "reg_mean.to_csv('./reg_mean.csv')\n"
    ]
   },
   {
@@ -172,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:15.058821Z",
-     "end_time": "2023-07-01T12:04:15.338138Z"
+     "start_time": "2023-07-01T18:41:22.038888Z",
+     "end_time": "2023-07-01T18:41:22.403236Z"
     }
    },
    "outputs": [
@@ -200,7 +204,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,11 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:15.346262Z",
-     "end_time": "2023-07-01T12:04:15.748583Z"
+     "start_time": "2023-07-01T18:41:22.410400Z",
+     "end_time": "2023-07-01T18:41:22.688803Z"
     }
    },
    "outputs": [
@@ -257,7 +261,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -292,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:15.758601Z",
-     "end_time": "2023-07-01T12:04:16.097409Z"
+     "start_time": "2023-07-01T18:41:22.693796Z",
+     "end_time": "2023-07-01T18:41:23.014414Z"
     }
    },
    "outputs": [
@@ -312,7 +316,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,11 +350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:16.101346Z",
-     "end_time": "2023-07-01T12:04:16.422320Z"
+     "start_time": "2023-07-01T18:41:23.021291Z",
+     "end_time": "2023-07-01T18:41:23.410934Z"
     }
    },
    "outputs": [
@@ -374,7 +378,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,11 +417,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:16.425468Z",
-     "end_time": "2023-07-01T12:04:16.695750Z"
+     "start_time": "2023-07-01T18:41:23.417804Z",
+     "end_time": "2023-07-01T18:41:23.708697Z"
     }
    },
    "outputs": [
@@ -441,7 +445,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -484,11 +488,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:16.701821Z",
-     "end_time": "2023-07-01T12:04:16.982543Z"
+     "start_time": "2023-07-01T18:41:23.717324Z",
+     "end_time": "2023-07-01T18:41:23.993170Z"
     }
    },
    "outputs": [
@@ -504,7 +508,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,11 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:16.985565Z",
-     "end_time": "2023-07-01T12:04:16.988174Z"
+     "start_time": "2023-07-01T18:41:23.996118Z",
+     "end_time": "2023-07-01T18:41:23.998589Z"
     }
    },
    "outputs": [
@@ -552,7 +556,7 @@
       "text/plain": "    t1_std    t2_std    pr_std   dna_std  tetra_std   reg_std\n0  0.58232  0.139765  0.114398  0.675449   0.582153  0.138924",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t1_std</th>\n      <th>t2_std</th>\n      <th>pr_std</th>\n      <th>dna_std</th>\n      <th>tetra_std</th>\n      <th>reg_std</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.58232</td>\n      <td>0.139765</td>\n      <td>0.114398</td>\n      <td>0.675449</td>\n      <td>0.582153</td>\n      <td>0.138924</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,11 +591,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:16.989282Z",
-     "end_time": "2023-07-01T12:04:17.235435Z"
+     "start_time": "2023-07-01T18:41:24.000926Z",
+     "end_time": "2023-07-01T18:41:24.171446Z"
     }
    },
    "outputs": [
@@ -599,7 +603,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -619,11 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:17.239360Z",
-     "end_time": "2023-07-01T12:04:17.396559Z"
+     "start_time": "2023-07-01T18:41:24.174820Z",
+     "end_time": "2023-07-01T18:41:24.387892Z"
     }
    },
    "outputs": [
@@ -631,7 +635,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -651,11 +655,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:17.397713Z",
-     "end_time": "2023-07-01T12:04:17.555026Z"
+     "start_time": "2023-07-01T18:41:24.388672Z",
+     "end_time": "2023-07-01T18:41:24.546592Z"
     }
    },
    "outputs": [
@@ -663,7 +667,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -683,11 +687,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:17.555869Z",
-     "end_time": "2023-07-01T12:04:17.727705Z"
+     "start_time": "2023-07-01T18:41:24.547743Z",
+     "end_time": "2023-07-01T18:41:24.717595Z"
     }
    },
    "outputs": [
@@ -695,7 +699,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -715,11 +719,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:17.727881Z",
-     "end_time": "2023-07-01T12:04:17.895998Z"
+     "start_time": "2023-07-01T18:41:24.718720Z",
+     "end_time": "2023-07-01T18:41:24.885258Z"
     }
    },
    "outputs": [
@@ -727,7 +731,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -747,11 +751,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:17.897154Z",
-     "end_time": "2023-07-01T12:04:18.066616Z"
+     "start_time": "2023-07-01T18:41:24.886347Z",
+     "end_time": "2023-07-01T18:41:25.053001Z"
     }
    },
    "outputs": [
@@ -759,7 +763,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,11 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:18.067898Z",
-     "end_time": "2023-07-01T12:04:18.071014Z"
+     "start_time": "2023-07-01T18:41:25.055157Z",
+     "end_time": "2023-07-01T18:41:25.058149Z"
     }
    },
    "outputs": [
@@ -838,27 +842,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:18.071293Z",
-     "end_time": "2023-07-01T12:04:18.073083Z"
+     "start_time": "2023-07-01T18:41:25.058672Z",
+     "end_time": "2023-07-01T18:41:25.060351Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-01T12:04:18.073466Z",
-     "end_time": "2023-07-01T12:04:18.074863Z"
+     "start_time": "2023-07-01T18:41:25.060722Z",
+     "end_time": "2023-07-01T18:41:25.062241Z"
     }
    }
   }
