--- a/domain_comparison/Domain_slicing_smu.ipynb
+++ b/domain_comparison/Domain_slicing_smu.ipynb
@@ -84,14 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T16:07:02.078056Z",
-     "end_time": "2023-07-01T16:07:02.169531Z"
+     "start_time": "2023-07-01T16:09:54.096674Z",
+     "end_time": "2023-07-01T16:09:54.160051Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    mutant                                   mutated_sequence  DMS_score  \\\n4      M1V  VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.669727   \n5      M1T  TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.380537   \n6      M1R  REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -1.470598   \n10     M1L  LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -2.032227   \n16     M1I  IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -1.370065   \n..     ...                                                ...        ...   \n800   L43F  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDFMLS...   0.039260   \n809   L43M  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDMMLS...   0.325452   \n810   L43W  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDWMLS...   0.554494   \n812   L43V  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDVMLS...   0.678319   \n816   L43S  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDSMLS...   0.792981   \n\n     DMS_score_bin  position_mut AS_old AS_new  \n4                0             1      M      V  \n5                1             1      M      T  \n6                0             1      M      R  \n10               0             1      M      L  \n16               0             1      M      I  \n..             ...           ...    ...    ...  \n800              1            43      L      F  \n809              1            43      L      M  \n810              1            43      L      W  \n812              1            43      L      V  \n816              1            43      L      S  \n\n[253 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>M1V</td>\n      <td>VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.669727</td>\n      <td>0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>M1T</td>\n      <td>TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.380537</td>\n      <td>1</td>\n      <td>1</td>\n      <td>M</td>\n      <td>T</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>M1R</td>\n      <td>REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-1.470598</td>\n      <td>0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>M1L</td>\n      <td>LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-2.032227</td>\n      <td>0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>M1I</td>\n      <td>IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-1.370065</td>\n      <td>0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>I</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>800</th>\n      <td>L43F</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDFMLS...</td>\n      <td>0.039260</td>\n      <td>1</td>\n      <td>43</td>\n      <td>L</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>809</th>\n      <td>L43M</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDMMLS...</td>\n      <td>0.325452</td>\n      <td>1</td>\n      <td>43</td>\n      <td>L</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>810</th>\n      <td>L43W</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDWMLS...</td>\n      <td>0.554494</td>\n      <td>1</td>\n      <td>43</td>\n      <td>L</td>\n      <td>W</td>\n    </tr>\n    <tr>\n      <th>812</th>\n      <td>L43V</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDVMLS...</td>\n      <td>0.678319</td>\n      <td>1</td>\n      <td>43</td>\n      <td>L</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>816</th>\n      <td>L43S</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDSMLS...</td>\n      <td>0.792981</td>\n      <td>1</td>\n      <td>43</td>\n      <td>L</td>\n      <td>S</td>\n    </tr>\n  </tbody>\n</table>\n<p>253 rows × 7 columns</p>\n</div>"
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Saving the different domains for better accessibility\n",
     "\n",
@@ -149,37 +159,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-01T16:07:02.142736Z",
-     "end_time": "2023-07-01T16:07:02.169793Z"
+     "start_time": "2023-07-01T18:39:41.385832Z",
+     "end_time": "2023-07-01T18:39:41.399529Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "position_mut  AS_old\n1             M        -0.873280\n2             E        -0.083675\n3             E        -0.141604\n4             P         0.103813\n5             Q         0.261568\n6             S         0.011298\n7             D         0.277957\n8             P        -0.008047\n9             S         0.180163\n10            V         0.459941\n11            E         0.338825\n12            P         0.281660\n13            P         0.212557\n14            L         0.423912\n15            S         0.501714\n16            Q         0.244436\n17            E         0.109599\n18            T        -0.034808\n19            F        -1.103998\n20            S         0.291671\n21            D         0.273371\n22            L        -0.698224\n23            W        -1.042575\n24            K        -0.601030\n25            L        -0.089520\n26            L        -0.647465\n27            P        -0.121727\n28            E         0.357104\n29            N         0.099784\n30            N         0.115491\n31            V         0.029145\n32            L         0.251913\n33            S         0.223833\n34            P         0.574463\n35            L         0.500802\n36            P         0.163158\n37            S         0.414404\n38            Q         0.171605\n39            A         0.334211\n40            M         0.471644\n41            D         0.470469\n42            D         0.490314\n43            L         0.398418\nName: mean, dtype: float64"
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
+    "t1_mean.to_csv('./t1_mean_smu.csv')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
+    "t2_mean.to_csv('./t2_mean_smu.csv')\n",
     "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
+    "pr_mean.to_csv('./pr_mean_smu.csv')\n",
     "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
+    "dna_mean.to_csv('./dna_mean_smu.csv')\n",
     "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
+    "tetra_mean.to_csv('./tetra_mean_smu.csv')\n",
     "\n",
     "reg_mean = reg_domain.mean().rename('mean')\n",
-    "\n",
-    "t1_mean"
+    "reg_mean.to_csv('./reg_mean_smu.csv')\n"
    ]
   },
   {
