--- a/domain_comparison/Comparision_domain_slicing.ipynb
+++ b/domain_comparison/Comparision_domain_slicing.ipynb
@@ -21,6 +21,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Checking whether the means for each position change significantly"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## T1 Domain"
    ],
    "metadata": {
