updated all files of data_exploration to add short explanation. Added new functions for pca analysis, clustering (kmeans and hierarchical) and plotting of those results

--- a/data_exploration/Mean_substitutions.ipynb
+++ b/data_exploration/Mean_substitutions.ipynb
@@ -1,23 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Hier berechne ich einen Mittelwert für jede Substitution"
+    "#### Mean substitutions\n",
+    "In this notebook, we took the steps to calculate the mean values for each substitution. This function is called \"de.mean_substitutions\". It is used to then calculate the distance matrix."
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.214826Z",
-     "start_time": "2023-06-13T15:30:03.162980800Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -27,14 +22,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.214826Z",
-     "start_time": "2023-06-13T15:30:03.162980800Z"
+     "end_time": "2023-07-03T17:22:45.135061800Z",
+     "start_time": "2023-07-03T17:22:44.533900100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
@@ -43,65 +38,63 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.299352200Z",
-     "start_time": "2023-06-13T15:30:03.214826Z"
+     "end_time": "2023-07-03T17:22:45.207346300Z",
+     "start_time": "2023-07-03T17:22:45.142754300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "# Auftrennen der Mutante in alte und neue AS\n",
+    "# Split up mutations in new and old AA\n",
     "mutations_df = dc.aufteilung_mut_pos(df)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.325976300Z",
-     "start_time": "2023-06-13T15:30:03.299352200Z"
+     "end_time": "2023-07-03T17:22:45.242773800Z",
+     "start_time": "2023-07-03T17:22:45.212740100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "# Gruppieren der Substitutionen, geordnet erst nach alter und dann nach neuer AS mit Inspiration von ChatGPT (.groupby in der Pandas Dokumentation beschreibt nur das groupen nach einem Parameter)\n",
+    "# Group AA by old and new AA\n",
     "subs_df = mutations_df.groupby([\"AS_old\", \"AS_new\"])\n",
-    "\n",
-    "# Berechnen des means für jede Kombination\n",
     "mean_scores = subs_df.DMS_score.mean()\n",
     "\n",
     "\n",
-    "# Es gibt 380 Möglichkeiten, 20 AS mit Reihenfolge und ohne zurücklegen zu kombinieren. Aus den Mittelwerten dieser 380 möglichen Substitutionen soll nun eine Distanzmatrix erstellt werden."
+    "# There are 380 substitutions that are all present in the datasets by Giacomelli."
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.363354100Z",
-     "start_time": "2023-06-13T15:30:03.325976300Z"
+     "end_time": "2023-07-03T17:22:45.258508300Z",
+     "start_time": "2023-07-03T17:22:45.242773800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "# Da \"mean_scores\" eine Serie ist, muss diese erst wieder in ein Data Frame umgewandelt werden. Dafür müssen den einzelnen Zeilen wieder konkrete Indizes zugewiesen werden, damit wieder ein Data Frame entsteht.\n",
+    "# \"mean_scores\" is a pd.Series, which has to be converted back to a pd.DataFrame\n",
     "mean_scores_df = mean_scores.reset_index()\n",
     "\n",
-    "# Pivot erstellt aus unserer in einem Data Frame aufgelisteten Substitutionen ein Data Frame, das in Form einer Tabelle eine Übersicht der Mittelwerte zeigt. Die Reihen sind die alten AS, die Spalten die neuen AS.\n",
+    "# Reshape the DataFrame\n",
     "mean_substitutions = mean_scores_df.pivot(index=\"AS_old\", columns=\"AS_new\", values= \"DMS_score\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:30:03.399481800Z",
-     "start_time": "2023-06-13T15:30:03.363354100Z"
+     "end_time": "2023-07-03T17:22:45.297871500Z",
+     "start_time": "2023-07-03T17:22:45.258508300Z"
     }
    }
   }
