Comparing the DNA binding domain

--- a/domain_comparison/Domain_slicing.ipynb
+++ b/domain_comparison/Domain_slicing.ipynb
@@ -336,11 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:07.304023Z",
-     "end_time": "2023-07-05T22:27:07.708907Z"
+     "start_time": "2023-07-05T22:34:21.549728Z",
+     "end_time": "2023-07-05T22:34:22.036128Z"
     }
    },
    "outputs": [
@@ -364,7 +364,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 50,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,7 +390,7 @@
     "print(dms_scores_dna.mean())\n",
     "print(dms_scores_dna.median())\n",
     "\n",
-    "\n",
+    "dms_scores_dna.to_csv('./data/dms_scores_dna.csv')\n",
     "sns.heatmap(dna_domain)"
    ]
   },
