--- a/domain_comparison/Domain_slicing_smu.ipynb
+++ b/domain_comparison/Domain_slicing_smu.ipynb
@@ -357,11 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:10.831417Z",
-     "end_time": "2023-07-05T22:27:11.150359Z"
+     "start_time": "2023-07-05T22:34:45.714317Z",
+     "end_time": "2023-07-05T22:34:46.109711Z"
     }
    },
    "outputs": [
@@ -385,7 +385,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 66,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -411,7 +411,7 @@
     "print(dms_scores_dna.mean())\n",
     "print(dms_scores_dna.median())\n",
     "\n",
-    "\n",
+    "dms_scores_dna.to_csv('./data/dms_scores_dna_smu.csv')\n",
     "sns.heatmap(dna_domain)"
    ]
   },
